fixed nav bar spacing

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+
 }
 
 #contact-header{
@@ -31,6 +32,8 @@ body{
     padding: 14px 16px;
     height: 10vh;
     padding: 0 10vw 0 10vw;
+    display: flex;
+    justify-content: space-around;
 }
 .nav-wrap a {
     display:block;
